[tool.poetry]
name = "dl4cv"
version = "0.1.0"
description = ""
authors = ["Marc Fabian Mezger <marc.mezger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
transformers = "^4.23.1"
opencv-python = "^4.6.0.66"
# torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.13.0-cp310-none-macosx_11_0_arm64.whl" }
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
