[tool.poetry]
name = "dl4cv"
version = "0.1.0"
description = ""
authors = ["Marc Fabian Mezger <marc.mezger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
transformers = "^4.23.1"
opencv-python = "^4.6.0.66"
# torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.13.0-cp310-none-macosx_11_0_arm64.whl" }
python-multipart = "^0.0.5"
black = "^22.10.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
autoflake = "^1.7.7"
pydantic = "^1.10.2"
mypy = "^0.982"
python-dotenv = "^0.21.0"
pillow = "^9.3.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[settings]
known_third_party = ["PIL", "core", "cv2", "fastapi", "numpy", "pydantic", "torch", "transformers"]
